# thesis-code

./: .gitignore  thesis-code.sublime-project
main/: detectors.py  image.py  images.py  main.py  matchers.py  my_homogrophy.py  perspective_center.py  thing.py
main/matcher/: __init__.py  camera.py  detectors.py  images.py  matchers.py  parameters.py  pre_processor_case.py  pre_processors.py  session.py  smoothers.py  test.py  test_case.py  thing.py
main_meh/: images.py  jason_cvs.py  main.py
meh/: CMakeLists.txt  main.cpp
my_app/: CMakeLists.txt  build.sh  my_app.cpp  my_app.h  my_app.h.in
my_app_py/: main.py
my_app_py/harris_corner_detector/: harris_corner_detector.py
playground/: bar_charts.py  smooth.py
python_tutorials/: main.py
python_tutorials/shi-thomasi_corner_detector/: main.py
python_tutorials/sift/: sift.py
